# AbTradebotSlaveV2

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
.linux/: Makefile  README.md  app.service  secrets.json.dist
app/: __main__.py
app/bot/: bot.py
app/bot/handlers/: __init__.py  alerts.py  exchange.py  help.py  keys.py  license.py  start.py  status.py  stop.py  trade.py
app/bot/structures/: __init__.py
app/bot/structures/filters/: __init__.py  admin.py
app/bot/structures/middlewares/: __init__.py  logs_md.py
app/config/: __init__.py  _logic.py  _logs.py  _paths.py  _version.py
app/database/: __init__.py  database.py
app/database/enums/: exchange.py
app/database/models/: __init__.py  base.py  secrets.py
app/database/repositories/: __init__.py  secrets.py
app/logic/: __init__.py  logic.py
app/logic/connectors/: __init__.py  abstract.py
app/logic/connectors/binance_con/: __init__.py  binance_exc.py  breakeven.py  exchange.py  exchange_info.py  warden.py
app/logic/connectors/bybit_con/: __init__.py  client.py  (+5 more)
app/logic/exchanges/: __init__.py  abstract.py
app/logic/schemas/: __init__.py  dataclasses.py  enums.py  exchange.py  signal.py  strategy_settings.py  types.py
app/logic/utils/: __init__.py  alert_worker.py  candles_sorter.py
portable/Windows/: TimeSync.bat
setupfiles/: innosetupfile.iss  setup.py
src/: launcher.py
src/bot/: __init__.py  __main__.py  bot.py
src/config/: _logs.py  _paths.py  _version.py
src/database/: database.py
src/database/models/: secrets.py
src/database/repositories/: secrets.py
(+16 files in other folders)
