[tool.poetry]
name = "abtradebotslavev2"
version = "0.1.0"
description = ""
authors = ["blowyourbra1n <blowyourbra1n@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
aiogram = "^3.7.0"
python-binance = "^1.0.19"
loguru = "^0.7.2"
pillow = "^10.3.0"
sqlalchemy = "^2.0.30"
aiosqlite = "^0.20.0"
greenlet = "^3.0.3"
httpx = "^0.27.0"
orjson = "^3.10.3"
cryptography = "^42.0.8"
h2 = "^4.1.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
